# amech-proto

./: .gitignore  README.md  download.sh  install.sh  lint.sh  pixi.toml  pyproject.toml  status.sh  update.sh
.github/workflows/: lint.yaml  test.yaml
scripts/: download.sh  install.sh  lint.sh  status.sh  test.sh  update.sh
src/: .gitignore
src/automech/: _00core.py  __init__.py  _mech.py  net.py  old_net.py  pyproject.toml  reac_table.py  schema.py  spec_table.py
src/automech/data/: __init__.py  name.py  rate.py  reac.py  thermo.py
src/automech/io/: __init__.py  _io.py
src/automech/io/cantera/: __init__.py  read.py
src/automech/io/chemkin/: __init__.py  _read.py  read.py  update.py  write.py
src/automech/io/mechanalyzer/: __init__.py  read.py  write.py
src/automech/io/rmg/: __init__.py  _read.py  read.py
src/automech/mecha/: _mecha.py
src/automech/mecha/data/: rate.py  reac.py
src/automech/mecha/io/chemkin/: read.py
src/automech/schema/: __init__.py  _core.py  col.py
src/automech/test/: test_io.py  test_mech.py
src/automech/test/data/: cyC5e1_exp.json  cyC5e1_exp_reactions.json  cyC5e1_exp_species.json  cyC5e1_reactions.csv  cyC5e1_species.csv  cyclopentane_reactions.csv  cyclopentane_species.csv  parent_orig_reactions.json  parent_orig_species.json  webb_sample.inp  webb_sample_species.txt
src/automech/tests/: test_io.py
src/automech/util/: __init__.py  col_.py  df_.py  io_.py
src/autopilot/: __init__.py  pyproject.toml
src/autostore/: __init__.py  pyproject.toml
src/autotools/: __init__.py  pyproject.toml
