[project]
name = "amech-proto"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
requires-python = ">= 3.10"
dependencies = ["pyvis", "pytest-xdist[psutil]>=3.6.1,<4", "pip"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Pixi
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
amech-proto = { path = ".", editable = true }

[tool.pixi.tasks]
download = { cmd = "./download.sh", cwd = "scripts" }
install = { cmd = "./install.sh", cwd = "scripts" }
lint = { cmd = "./lint.sh", cwd = "scripts" }
status = { cmd = "./status.sh", cwd = "scripts" }
update = { cmd = "./update.sh", cwd = "scripts" }
test = { cmd = "./test.sh", cwd = "scripts" }

[tool.pixi.dependencies]
ipython = ">=8.5.0"  	# AutoChem dependencies
ipywidgets = "*"
more-itertools = "*"
networkx = ">=3.3"
numpy = ">=1.24.0"
py3dmol = "*"
pyparsing = "*"
pyyaml = "*"
qcelemental = "*"
rdkit = "*"
scipy = ">=1.9.0"
xarray = ">=2022.6.0"
click = "*"	            # AutoMech dependencies
matplotlib = ">=3.6.0"
pandas = ">=1.5.0"
tqdm = "*"
narwhals = ">=1.1.0,<1.2"
pandera = ">=0.20.1,<0.21"
polars = "*"
pyarrow = ">=17.0.0,<18"
cantera = ">=3.0.1,<4"

[tool.pixi.feature.test.dependencies]
pip = "*"
pytest = "*"
jupyter = "*"

[tool.pixi.feature.lint.dependencies]
pylint = "*"
pre-commit = "*"
black = "*"
ruff = "*"
mypy = "*"

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
myst-parser = "*"
sphinx-book-theme = "*"
sphinx-autodoc-typehints = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default"}
dev = {features = ["test", "lint", "docs"], solve-group = "default"}

# Linting
[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.ruff]
target-version = "py311"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "N806", # Variable in function should be lowercase
    "C901", # Too complex
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
follow_imports = "skip"
ignore_errors = true

