[tool.poetry]
name = "automech"
version = "0.1.0"
description = ""
authors = ["Andreas Copan <avcopan@gmail.com>"]
readme = "README.md"
packages = [
    { include = "automech" },
    { include = "mecha" },
    { include = "tmp_mecha" },
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
